# eval-runner

./: .gitignore  README.md  evaluation_config.yaml  pyproject.toml  spec.yaml
.github/scripts/: evaluate.py
.github/workflows/: evaluate.yml
builtins/: llm.py
example/: agent.py  dataset.py  evaluation_config.yaml
examples/dify/: evaluation_config.yaml
examples/langgraph/: agent.py  dataset.py  evaluation_config.yaml  langgraph.json
prebuilts/: code.py  llm.py
