[project]
name = "lowcode-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jmespath>=1.0.1",
    "langchain-openai>=0.3.28",
    "langchain[anthropic,aws,google-genai,openai]>=0.3.27",
    "langgraph-sdk>=0.2.0",
    "langsmith>=0.4.9",
    "openevals>=0.1.0",
    "pyyaml>=6.0.2",
]
